--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Daily Ayah</string>
+    <string name="app_name">Daily Ayat</string>
 
     <!--################################-->
     <!--Drawer Layout open and close string-->
@@ -16,7 +16,7 @@
 
     <!--################-->
     <!--privacy policy text-->
-    <string name="first_heading"><b>Privacy Policy for Daily Ayah</b>\nAt Daily Ayah, one of our main priorities is the privacy of our visitors.This Privacy Policy document contains types of information that is collected and recorded by Trodev and how we use it.If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
+    <string name="first_heading"><b>Privacy Policy for Daily Ayat</b>\nAt Daily Ayat, one of our main priorities is the privacy of our visitors.This Privacy Policy document contains types of information that is collected and recorded by Trodev and how we use it.If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
     <string name="second_heading"><b>\nLog Files</b>\nTrodev follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users\' movement on the app, and gathering demographic information.</string>
     <string name="third_heading"><b>\nPrivacy Policies</b>\nYou may consult this list to find the Privacy Policy for each of the advertising partners of Daily Ayah. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Beacons that are used in their respective advertisements and links that appear on Trodev. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on this app or other apps or websites. Note that Daily Ayah has no access to or control over these cookies that are used by third-party advertisers.</string>
     <string name="fourth_heading"><b>\nThird Party Privacy Policies</b>\nTrodev\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</string>
